[gd_scene load_steps=10 format=2]

[ext_resource path="res://Background/Arena.tscn" type="PackedScene" id=1]
[ext_resource path="res://Ball/Ball.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemy/AI.tscn" type="PackedScene" id=4]
[ext_resource path="res://Player/PlayerInput.gd" type="Script" id=5]
[ext_resource path="res://Game/Game.gd" type="Script" id=6]
[ext_resource path="res://Enemy/AIInput.gd" type="Script" id=7]
[ext_resource path="res://HUD/HUD.tscn" type="PackedScene" id=8]

[sub_resource type="GDScript" id=1]

[node name="Game" type="Node2D"]
script = ExtResource( 6 )

[node name="Arena" parent="." instance=ExtResource( 1 )]

[node name="Ball" parent="." instance=ExtResource( 2 )]
position = Vector2( 512, 300 )

[node name="StartTimer" type="Timer" parent="Ball"]
wait_time = 3.0
one_shot = true
script = SubResource( 1 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 25, 300 )

[node name="PlayerInput" type="Node" parent="Player"]
script = ExtResource( 5 )

[node name="AI" parent="." instance=ExtResource( 4 )]
position = Vector2( 999, 300 )

[node name="AI_Input" type="Node" parent="AI"]
script = ExtResource( 7 )
ball_path = NodePath("../../Ball")

[node name="HUD" parent="." instance=ExtResource( 8 )]

[connection signal="score_left" from="Arena" to="." method="_on_Arena_score_left"]
[connection signal="score_right" from="Arena" to="." method="_on_Arena_score_right"]
[connection signal="timeout" from="Ball/StartTimer" to="." method="_on_StartTimer_timeout"]
